--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'signing'
 }
 
-group 'com.natpryce'
+group 'com.natpryce.github'
 
 version(hasProperty("-version") ? property("-version") : "SNAPSHOT")
 println "building version ${version}"
